--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-seed",
+  "name": "angular-rest",
   "description": "A starter project for AngularJS",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "private": true,
@@ -13,5 +13,6 @@
     "angular-mocks": "~1.2.x",
     "angular-bootstrap": "0.11.x",
     "bootstrap": "3.1.x"
+    
   }
 }
