--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-rest",
-  "description": "A starter project for AngularJS",
+  "description": "A restful app ui with angular",
   "version": "0.1.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/zsumore/angular-rest",
   "license": "MIT",
   "private": true,
   "dependencies": {
