--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "angular-bootstrap": "0.11.x",
-    "bootstrap": "3.1.x"
-    
+    "bootstrap": "3.1.x",
+    "angular-ui-codemirror": "0.1.x"
   }
 }
