--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-mocks": "~1.2.x",
     "angular-bootstrap": "0.11.x",
     "bootstrap": "3.1.x",
-    "angular-ui-codemirror": "0.1.x"
+    "angular-ui-ace": "0.1.x"
+    
   }
 }
