--- a/app/doc/default-restsql.properties
+++ b/app/doc/default-restsql.properties
@@ -4,7 +4,7 @@
 
 
 # absolute path
-sqlresources.dir=/home/ftp/restsql/sqlres
+sqlresources.dir=D:/res
 
 # database.type=[postgresql,mysql]
 database.type=postgresql
@@ -18,20 +18,18 @@ response.useXmlDirective=false
 http.response.cacheControl=no-cache, no-transform
 http.response.accessControl=*
 
-response.sql.limit=1000
-response.sql.maxLimit=5000
+response.sql.limit=500
+response.sql.maxLimit=10000
 response.sql.offset=-1
 
 response.cvs.lineSeparator=\n
-response.cvs.columnSeparator=;
-response.cvs.useHeader=false
+response.cvs.columnSeparator=,
 
 # default response.outputType=[json, xml, csv]
 response.outputType=json
 response.charset=UTF-8
 response.error.prefix=[Error]
 response.success.prefix=[Success]
-
 
 # cache unit second
 cache.result.maxCacheSize=1000
