--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,10 @@
   "private": true,
   "dependencies": {
     "html5-boilerplate": "~4.3.0",
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x",
+    "angular": "1.2.21",
+    "angular-route": "1.2.21",
+    "angular-loader": "1.2.21",
+    "angular-mocks": "~1.2.21",
     "angular-bootstrap": "0.11.x",
     "bootstrap": "3.1.x",
     "angular-ui-ace": "0.1.x"
