--- a/bower.json
+++ b/bower.json
@@ -7,13 +7,13 @@
   "private": true,
   "dependencies": {
     "html5-boilerplate": "~4.3.0",
-    "angular": "1.2.21",
-    "angular-route": "1.2.21",
-    "angular-loader": "1.2.21",
-    "angular-mocks": "~1.2.21",
-    "angular-bootstrap": "0.11.x",
-    "bootstrap": "3.1.x",
-    "angular-ui-ace": "0.1.x"
+    "angular": "1.3.x",
+    "angular-route": "1.3.x",
+    "angular-loader": "1.3.x",
+    "angular-mocks": "1.3.x",
+    "angular-bootstrap": "0.12.x",
+    "bootstrap": "3.3.x",
+    "angular-ui-ace": "0.2.x"
     
   }
 }
